fix: layout issue in home button of navbar

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -279,3 +279,7 @@ a {
 .table-div.no-left-margin{
     margin: 30px 0px 30px 0px;
 }
+
+.display-inline-table{
+    display: inline-table;
+}
